environments/gloo-edge/gateway-api/portal-only/gloo-portal-demo/base/tracks-api/tracks-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tracks-route
  namespace: gloo-system
spec:
  hostnames:
    - tracks.glootest.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tracks-rest-api
          namespace: tracks
          port: 5000
          weight: 1
      #filters:
      #  - type: URLRewrite
      #    urlRewrite:
      #      path:
      #        replacePrefixMatch: /
      #        type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: tracks-cors
